name:                ekg-statsd-wai
version:             0.1.0.0
synopsis:            Integrates a WAI application with EKG + Statsd
license:             Apache
license-file:        LICENSE
author:              Alejandro Cabrera
maintainer:          cpp.cabrera@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.20

executable EkgWai
  main-is: EkgWai.hs
  ghc-options: -Wall -O3 -with-rtsopts=-T
  build-depends:       base >=4.7 && <4.8,
                       wai >= 2.1.0,
                       warp >= 2.1.4,
                       http-types >= 0.8.4,
                       bytestring,
                       containers,
                       text,
                       mtl,
                       ekg,
                       ekg-core,
                       ekg-statsd
  default-language:    Haskell2010
