name:                ekg-wai
version:             0.1.0.0
synopsis:            Integrates a WAI application with EKG
description:

    This is WAI middleware that wraps the underlying application and
    counts the number of times a particular set of routes has been
    visited.

license:             Apache
license-file:        LICENSE
author:              Alejandro Cabrera
maintainer:          cpp.cabrera@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.20

library
  exposed-modules: Middleware.EkgWai
  build-depends: base >=4.7 && <4.8,
                 wai >= 2.1.0,
                 bytestring,
                 containers,
                 text,
                 ekg-core
  default-language: Haskell2010

executable Example
  main-is: Main.hs
  hs-source-dirs: example

  ghc-options: -Wall -O3 -with-rtsopts=-T
  build-depends: base >=4.7 && <4.8,
                 wai >= 2.1.0,
                 warp >= 2.1.4,
                 http-types >= 0.8.4,
                 bytestring,
                 containers,
                 text,
                 ekg,
                 ekg-core,
                 ekg-statsd,
                 ekg-wai
  default-language:    Haskell2010
